# fastapi-strawberry-fly

./: README.md  fly.toml  main.py  pyproject.toml
app/graphql/: entry.py
